Code used for demo at P4 workshop

--- a/drivers/net/ethernet/rocker/Makefile
+++ b/drivers/net/ethernet/rocker/Makefile
@@ -2,6 +2,6 @@
 # Makefile for the Rocker network device drivers.
 #
 
-obj-$(CONFIG_ROCKER) += rocker2.o
+obj-$(CONFIG_ROCKER) += rocker.o
 
-rocker2-y :=  rocker.o rocker_p4.o rocker_p4_l2l3.o rocker_p4_l2l3_pd.o
+rocker-y :=  rocker_main.o rocker_p4.o rocker_p4_l2l3.o rocker_p4_l2l3_pd.o rocker_p4_rmt.o rocker_p4_pd.o
